Type creation example.

--- a/TechniquesForWritingLibrariesExamples/TechniquesForWritingLibrariesExamples.csproj
+++ b/TechniquesForWritingLibrariesExamples/TechniquesForWritingLibrariesExamples.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DelegatingCallsToTypeCreation\DelegatedTypeCreation.cs" />
     <Compile Include="RegistrationApisAndContextObjects\FullFluentBuilderExample.cs" />
     <Compile Include="RegistrationApisAndContextObjects\SimpleConfigurationApi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
